--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/Level1.Level1
-GameDefaultMap=/Game/Levels/Level1.Level1
+EditorStartupMap=/Game/Levels/prova1.prova1
+GameDefaultMap=/Game/Levels/prova1.prova1
 GlobalDefaultGameMode="/Script/MyProject3.MyProject3GameMode"
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
